refactor: remove unnecessary lines