@@ -1,6 +1,7 @@
 package com.ferromateus.debtorsmanagement.infrastructure.gateway;
 
 import com.ferromateus.debtorsmanagement.application.mapper.PaymentMapper;
+import com.ferromateus.debtorsmanagement.domain.exception.ItemNotFoundException;
 import com.ferromateus.debtorsmanagement.domain.gateway.PaymentGateway;
 import com.ferromateus.debtorsmanagement.domain.model.Payment;
 import com.ferromateus.debtorsmanagement.infrastructure.persistence.entity.PaymentEntity;
@@ -9,6 +10,7 @@ import com.ferromateus.debtorsmanagement.infrastructure.persistence.repository.P
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class PaymentRepositoryGateway implements PaymentGateway {
     private final PaymentRepository paymentRepository;
@@ -27,7 +29,7 @@ public class PaymentRepositoryGateway implements PaymentGateway {
     @Override
     public List<Payment> getPayments() {
         List<PaymentEntity> payments = (List<PaymentEntity>) paymentRepository.findAll();
-        return payments.stream().map(PaymentMapper::toDomain).collect(Collectors.toList());
+        return payments.stream().map(PaymentMapper::toDomain).toList();
     }
 
     @Override
@@ -37,14 +39,13 @@ public class PaymentRepositoryGateway implements PaymentGateway {
 
     @Override
     public Payment getPayment(UUID id) {
-        PaymentEntity paymentEntity = paymentRepository.findById(id).orElse(null);
+        PaymentEntity paymentEntity = paymentRepository.findById(id).orElseThrow(() -> new ItemNotFoundException("Payment not found"));
         return PaymentMapper.toDomain(paymentEntity);
     }
 
     @Override
     public Payment updatePayment(UUID id, Payment payment) {
-        PaymentEntity paymentEntity = paymentRepository.findById(id).orElse(null);
-        if (paymentEntity == null) throw new IllegalArgumentException("Payment not found");
+        PaymentEntity paymentEntity = paymentRepository.findById(id).orElseThrow(() -> new ItemNotFoundException("Payment not found"));
 
         paymentEntity.setId(payment.getId());
         PaymentEntity debtToUpdate = PaymentMapper.toEntity(payment);
